--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
   "devDependencies": {
     "bower": "^1.7.7",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.0.0",
-    "gulp-clean-css": "^3.4.1",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-clean-css": "^3.9.3",
     "gulp-concat": "^2.6.1",
-    "gulp-concat-css": "^2.3.0",
-    "gulp-notify": "^3.0.0",
+    "gulp-concat-css": "^3.1.0",
+    "gulp-notify": "^3.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0",
-    "gulp-uncss": "^1.0.6"
+    "gulp-uncss": "^1.0.6",
+    "wiredep": "^4.0.0"
   },
   "scripts": {},
-  "dependencies": {}
+  "dependencies": {
+  }
 }
